--- a/.github/actions/docker-compose/action.yml
+++ b/.github/actions/docker-compose/action.yml
@@ -5,7 +5,10 @@ runs:
   steps:
     - name: Download Docker-Compose plugin
       shell: bash
-      run: curl -SL https://github.com/docker/compose/releases/download/v2.16.0/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
+      run: curl -SL https://github.com/docker/compose/releases/download/v2.16.0/docker-compose-linux-x86_64 -o ~/docker-compose
     - name: Make plugin executable
       shell: bash
-      run: sudo chmod +x /usr/local/bin/docker-compose
+      run: chmod +x ~/docker-compose
+    - name: Move plugin into /usr/local/bin
+      shell: bash
+      run: sudo mv ~/docker-compose /usr/local/bin/docker-compose
