--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ env:
   DATABASE_URL: postgres://postgres:postgres@localhost:5432/quotes
   VITE_API_URL: http://localhost:3000
   API_SECRET: secretvalue
+  PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+  PLAYWRIGHT_BROWSER_PATH: 0
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
@@ -25,3 +27,13 @@ jobs:
       - uses: ./.github/actions/docker-compose
       - name: Run tests
         run: pnpm test:backend:int
+  e2e-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/build
+      - uses: ./.github/actions/docker-compose
+      - name: Install Playwright
+        run: cd e2e && npx playwright install --with-deps
+      - name: Run tests
+        run: pnpm test:e2e
